Add grid system

--- a/index.html
+++ b/index.html
@@ -2,15 +2,81 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script scr="bower_components/jquery/src/jquery.js"></script>
     <link rel="stylesheet" href="bower_components/meyer-reset/stylesheets/_meyer-reset.scss">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <script scr="bower_components/jquery/src/jquery.js"></script>
-    <link rel="stylesheet" href="bower_components/susy/sass/_susy.scss">
+    <!-- <link rel="stylesheet" href="bower_components/susy/sass/_susy.scss"> -->
     <title>responsive-icon-grid</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-     
+    <link rel="stylesheet" href="assets/css/styles.scss">
+
   </head>
   <body>
 
+    <div class"container-fluid">
+
+      <div class="page-header">
+        <h1>Responsive-Icon-Grid</h1>
+    </div>
+
+
+
+  <div class="section group">
+<!---         FIRST ROW    ------------->
+      <div class="col span_1_of_3">
+        <ul class="col1">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+      </div>
+
+
+    	<div class="col span_1_of_3">
+        <ul class="col1">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+    	</div>
+
+      <div class="col span_1_of_3">
+        <ul class="col3">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+    </div>
+  </div>
+<!--------------------------------------->
+
+
+  <div class="section group">
+<!---         SECOND ROW    ------------->
+      <div class="col span_1_of_3">
+        <ul class="col1">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+      </div>
+
+
+    	<div class="col span_1_of_3">
+        <ul class="col1">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+    	</div>
+
+      <div class="col span_1_of_3">
+        <ul class="col3">
+          <li><img src=""></li>
+            <h3>Squid volupita</h3>
+        </ul>
+    </div>
+  </div>
+
+
+
+
+
+
+    </div>
   </body>
 </html>
