--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <script scr="bower_components/jquery/src/jquery.js"></script>
     <link rel="stylesheet" href="bower_components/meyer-reset/stylesheets/_meyer-reset.scss">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" href="bower_components/susy/sass/_susy.scss"> -->
     <title>responsive-icon-grid</title>
-    <link rel="stylesheet" href="assets/css/styles.scss">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
   </head>
   <body>
+
+  <div class="main">
 
     <div class"container-fluid">
 
@@ -24,25 +27,31 @@
 <!---         FIRST ROW    ------------->
       <div class="col span_1_of_3">
         <ul class="col1">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+          <i class="fa fa-bus" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3>BUS</h3>
+            <p>It gets you there</p>
         </ul>
       </div>
 
 
     	<div class="col span_1_of_3">
-        <ul class="col1">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+        <ul class="col2">
+          <i class="fa fa-bicycle" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3>BICYCLE</h3>
+            <p>The best way to go</p>
         </ul>
     	</div>
 
       <div class="col span_1_of_3">
         <ul class="col3">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+          <i class="fa fa-taxi" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3>TAXI</h3>
+            <p>Leave the driving to me</P>
         </ul>
-    </div>
+      </div>
   </div>
 <!--------------------------------------->
 
@@ -51,23 +60,29 @@
 <!---         SECOND ROW    ------------->
       <div class="col span_1_of_3">
         <ul class="col1">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+          <i class="fa fa-train" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3 class="train">TRAIN</h3>
+            <p>see the world<p>
         </ul>
       </div>
 
 
     	<div class="col span_1_of_3">
-        <ul class="col1">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+        <ul class="col2">
+          <i class="fa fa-rocket" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3>ROCKET</h3>
+            <p>blast-off<p>
         </ul>
     	</div>
 
       <div class="col span_1_of_3">
         <ul class="col3">
-          <li><img src=""></li>
-            <h3>Squid volupita</h3>
+          <i class="fa fa-plane" aria-hidden="true"></i>
+            <span class="stick"></span>
+            <h3>PLANE</h3>
+            <p>fly<p>
         </ul>
     </div>
   </div>
@@ -76,7 +91,7 @@
 
 
 
-
+      </div>
     </div>
   </body>
 </html>
