--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
   <div class="main">
 
-    <div class"container-fluid">
+    <div class"container-fluid"><!--  BOOTSTRAP --->
 
       <div class="page-header">
-        <h1>Responsive-Icon-Grid</h1>
+        <h1>Responsive-Icon-Grid<small>Transportation</small></h1>
     </div>
+<!---  End of Bootstrap   ----->
 
-
-
+<!---    RESPONSIVE GRID    ------->
   <div class="section group">
 <!---         FIRST ROW    ------------->
       <div class="col span_1_of_3">
-        <ul class="col1">
+        <ul class="col1" id="one">
           <i class="fa fa-bus" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3>BUS</h3>
-            <p>It gets you there</p>
+            <p>Sit back and relax</p>
         </ul>
       </div>
 
 
     	<div class="col span_1_of_3">
-        <ul class="col2">
+        <ul class="col2" id="two">
           <i class="fa fa-bicycle" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3>BICYCLE</h3>
@@ -45,11 +45,11 @@
     	</div>
 
       <div class="col span_1_of_3">
-        <ul class="col3">
+        <ul class="col3" id="three">
           <i class="fa fa-taxi" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3>TAXI</h3>
-            <p>Leave the driving to me</P>
+            <p>New York City</P>
         </ul>
       </div>
   </div>
@@ -59,34 +59,34 @@
   <div class="section group">
 <!---         SECOND ROW    ------------->
       <div class="col span_1_of_3">
-        <ul class="col1">
+        <ul class="col1" id="four">
           <i class="fa fa-train" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3 class="train">TRAIN</h3>
-            <p>see the world<p>
+            <p>See the world<p>
         </ul>
       </div>
 
 
     	<div class="col span_1_of_3">
-        <ul class="col2">
+        <ul class="col2" id="five">
           <i class="fa fa-rocket" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3>ROCKET</h3>
-            <p>blast-off<p>
+            <p>Blast-off<p>
         </ul>
     	</div>
 
       <div class="col span_1_of_3">
-        <ul class="col3">
+        <ul class="col3" id="six">
           <i class="fa fa-plane" aria-hidden="true"></i>
             <span class="stick"></span>
             <h3>PLANE</h3>
-            <p>fly<p>
+            <p>Fly<p>
         </ul>
     </div>
   </div>
-
+<!--- END OF RESPONSIVE GRID         ------>
 
 
 
