Add some links and script tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="bower_components/meyer-reset/stylesheets/_meyer-reset.scss">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="bower_components/susy/sass/_susy.scss"> -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/susy/sass/_suzy.scss">
+    <link rel="stylesheet" href="bower_components/templates/project/_grid.scss">
     <title>responsive-icon-grid</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -93,5 +96,6 @@
 
       </div>
     </div>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
