--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       </div>
 
 
-<!---    RESPONSIVE ICON-GRID    ------->
 
-<!---    FIRST ROW    ------------->
+<!---  FIRST ROW    ------>
   <div class="row">
       <div class="col col-xs-6 col-md-4">
         <ul class="col1" id="one">
