changed Bicycle to Bike

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <script scr="bower_components/jquery/src/jquery.js"></script>
     <link rel="stylesheet" href="bower_components/meyer-reset/stylesheets/_meyer-reset.scss">
@@ -13,79 +14,87 @@
     <title>responsive-icon-grid</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 
-  </head>
-  <body>
+</head>
 
-    <div class"container"><!--  BOOTSTRAP --->
-      <div class="page-header">
-        <h1>Responsive-Icon-Grid<small>Transportation</small></h1>
-      </div>
+<body>
 
-
-
-<!---  FIRST ROW    ------>
-  <div class="row">
-      <div class="col col-xs-6 col-md-4">
-        <ul class="col1" id="one">
-          <i class="fa fa-bus" aria-hidden="true"></i>
-            <span class="stick"></span>
-            <h3>BUS</h3>
-            <p>Sit back and relax</p>
-        </ul>
-      </div>
+    <div class "container">
+        <!--  BOOTSTRAP --->
+        <div class="page-header">
+            <h1>Responsive-Icon-Grid<small>Transportation</small></h1>
+        </div>
 
 
-    	<div class="col col-xs-6 col-md-4">
-        <ul class="col2" id="two">
-          <i class="fa fa-bicycle" aria-hidden="true"></i>
-            <span class="stick"></span>
-            <h3>BICYCLE</h3>
-            <p>The best way to go</p>
-        </ul>
-    	</div>
 
-      <div class="col col-xs-6 col-md-4">
-        <ul class="col3" id="three">
-          <i class="fa fa-taxi" aria-hidden="true"></i>
-            <span class="stick"></span>
-            <h3>TAXI</h3>
-            <p>New York City</P>
-        </ul>
-      </div>
-
-<!--  SECOND ROW -->
+        <!---  FIRST ROW    ------>
+        <div class="row">
             <div class="col col-xs-6 col-md-4">
-              <ul class="col1" id="four">
-                <i class="fa fa-train" aria-hidden="true"></i>
-                  <span class="stick"></span>
-                  <h3 class="train">TRAIN</h3>
-                  <p>See the world<p>
-              </ul>
+                <ul class="col1" id="one">
+                    <i class="fa fa-bus" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3>BUS</h3>
+                    <p>Sit back and relax</p>
+                </ul>
             </div>
 
 
-          	<div class="col col-xs-6 col-md-4">
-              <ul class="col2" id="five">
-                <i class="fa fa-rocket" aria-hidden="true"></i>
-                  <span class="stick"></span>
-                  <h3>ROCKET</h3>
-                  <p>Blast-off<p>
-              </ul>
-          	</div>
+            <div class="col col-xs-6 col-md-4">
+                <ul class="col2" id="two">
+                    <i class="fa fa-bicycle" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3>BIKE</h3>
+                    <p>The best way to go</p>
+                </ul>
+            </div>
+
+            <div class="col col-xs-6 col-md-4">
+                <ul class="col3" id="three">
+                    <i class="fa fa-taxi" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3>TAXI</h3>
+                    <p>New York City</P>
+                </ul>
+            </div>
+
+            <!--  SECOND ROW -->
+            <div class="col col-xs-6 col-md-4">
+                <ul class="col1" id="four">
+                    <i class="fa fa-train" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3 class="train">TRAIN</h3>
+                    <p>See the world
+                        <p>
+                </ul>
+            </div>
 
 
             <div class="col col-xs-6 col-md-4">
-              <ul class="col3" id="six">
-                <i class="fa fa-plane" aria-hidden="true"></i>
-                  <span class="stick"></span>
-                  <h3>PLANE</h3>
-                  <p>Fly<p>
-              </ul>
-          </div>
+                <ul class="col2" id="five">
+                    <i class="fa fa-rocket" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3>ROCKET</h3>
+                    <p>Blast-off
+                        <p>
+                </ul>
+            </div>
 
-      </div><!-- end of row -->
-    </div><!-- end of container -->
+
+            <div class="col col-xs-6 col-md-4">
+                <ul class="col3" id="six">
+                    <i class="fa fa-plane" aria-hidden="true"></i>
+                    <span class="stick"></span>
+                    <h3>PLANE</h3>
+                    <p>Fly
+                        <p>
+                </ul>
+            </div>
+
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of container -->
 
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
